Dark Mode Fixes

--- a/src/styles/components/_rd-header.scss
+++ b/src/styles/components/_rd-header.scss
@@ -93,7 +93,7 @@
 	justify-content: space-between;
 	align-items: center;
 	position: relative;
-	padding: 5px;
+	padding: 4px;
 	width: $theme-toggle-button-width;
 	min-height: 25px;
 	background-color: $blue-400;
@@ -105,7 +105,7 @@
 		display: block;
 		position: absolute;
 		top: 50%;
-		left: 0;
+		right: 1px;
 		width: 25px;
 		height: 25px;
 		border-radius: 50%;
@@ -113,12 +113,18 @@
 		transform: translateY(-50%);
 		transition: transform 200ms ease-in-out;
 	}
+
+	@include RDHeaderScrolledStyle {
+		display: none;
+	}
 }
 
 .rd-header__switch--dark::before {
-	transform: translate(calc(#{$theme-toggle-button-width} - 25px), -50%);
+	transform: translate(calc(27px - #{$theme-toggle-button-width}), -50%);
 }
 
 .rd-header__switch .rd-icon {
+	width: 20px;
+	height: 20px;
 	fill: $white;
 }
