--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -2,8 +2,4 @@
 	.dark-mode & {
 		@content;
 	}
-
-	@media (prefers-color-scheme: dark) {
-		@content;
-	}
 }
