--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -17,4 +17,4 @@ $font-weight-bold: 700;
 
 $header-scrolled-min-height: 45px;
 
-$theme-toggle-button-width: 80px;
+$theme-toggle-button-width: 55px;
